# controllers/tasks.js
@@ -1,34 +1,56 @@
 const { Task } = require("../models/task");
-const {
-   HttpError, 
-   ctrlWrapper } = require("../helpers");
+const { HttpError, ctrlWrapper } = require("../helpers");
+
+// tasks
 
 const addTask = async (req, res) => {
-
 	const { _id: userId } = req.user;
 
 	const newTask = await Task.create({ ...req.body, userId });
-  // const {_id, title, text, priority, deadline, createdAt} = newTask
 	return res.status(201).json(newTask);
-	
-  // return res.status(201).json({
-  //   id: _id,
-  //   title,
-  //   text,
-  //   priority,
-  //   deadline,
-  //   createdAt,
-  //   owner
-  // });
-}
+};
 
 const getAllTasks = async (req, res) => {
 	const { _id: owner } = req.user;
-  		const list = await Task.find({ owner }, " -updatedAt");
-		res.status(200).json(list);
-    }
+	console.log(owner);
+	const list = await Task.find({ userId: owner }, " -updatedAt");
+	res.status(200).json(list);
+};
 
-const deleteTask = async (req, res) => {
+const deleteAllTasks = async (req, res) => {
+	const { _id: userId } = req.user;
+	const result = await Task.deleteMany({ userId });
+	// console.log("result", result)
+	if (!result) {
+		throw HttpError(404, "Not found");
+	}
+	return res
+		.status(200)
+		.json({ message: "Tasks deleted", deletedCount: result.deletedCount });
+};
+
+// tasks/columns/{columnId}
+
+const getColumnTasks = async (req, res) => {
+	const { id: columnId } = req.params;
+
+	const list = await Task.find({ columnId}, " -updatedAt");
+	res.status(200).json(list);
+};
+
+const deleteColumnTasks = async (req, res) => {
+	const { id: columnId } = req.params;
+	const result = await Task.deleteMany({columnId});
+
+	if (!result) {
+		throw HttpError(404, "Not found");
+	}
+	return res.status(200).json({ message: "Tasks deleted", deletedCount: result.deletedCount });
+};
+
+// tasks/{taskId}
+
+const deleteTaskById = async (req, res) => {
 	const { id } = req.params;
 	const deletedTask = await Task.findByIdAndRemove(id);
 
@@ -36,11 +58,10 @@ const deleteTask = async (req, res) => {
 		throw HttpError(404, "Not found");
 	}
 	return res.status(204).json({ message: "Task deleted" });
-  // return res.status(200).json(deletedTask);
+	// return res.status(200).json(deletedTask);
+};
 
-}
-
-async function getTaskById(req, res) {
+const getTaskById = async (req, res) => {
 	const { id } = req.params;
 	const taskById = await Task.findById(id);
 
@@ -50,7 +71,7 @@ async function getTaskById(req, res) {
 	res.status(200).json(taskById);
 }
 
-async function updateTaskById(req, res) {
+const  updateTaskById = async (req, res)=> {
 	const { id } = req.params;
 
 	const updatedTask = await Task.findByIdAndUpdate(id, req.body, {
@@ -63,25 +84,15 @@ async function updateTaskById(req, res) {
 	return res.status(200).json(updatedTask);
 }
 
-// async function updateStatusTask(req, res) {
-// 	const { id } = req.params;
-// 	console.log(id);
-
-// 	const updatedTask = await Task.findByIdAndUpdate(id, req.body, {
-// 		new: true,
-// 	});
-
-// 	if (!updatedTask) {
-// 		throw HttpError(404, "Not found");
-// 	}
-// 	return res.status(200).json(updatedTask);
-// }
-
 module.exports = {
-  addTask: ctrlWrapper(addTask),
-	deleteTask: ctrlWrapper(deleteTask),
+	addTask: ctrlWrapper(addTask),
 	getAllTasks: ctrlWrapper(getAllTasks),
+	deleteAllTasks: ctrlWrapper(deleteAllTasks),
+
+	getColumnTasks: ctrlWrapper(getColumnTasks),
+	deleteColumnTasks: ctrlWrapper(deleteColumnTasks),
+
+	deleteTaskById: ctrlWrapper(deleteTaskById),
 	getTaskById: ctrlWrapper(getTaskById),
-	// updateStatusTask: ctrlWrapper(updateStatusTask),
 	updateTaskById: ctrlWrapper(updateTaskById),
 };
