# routes/tasks.js
@@ -8,16 +8,20 @@ const router = express.Router();
 
 router.post("/", authenticate,  validateBody(schemas.addSchema), ctrl.addTask);
 
-router.delete("/:id", authenticate,  isValidId, ctrl.deleteTask);
-
 router.get("/", authenticate, ctrl.getAllTasks);
+
+router.delete("/", authenticate,  ctrl.deleteAllTasks);
+
+
+router.get("/columns/:id", authenticate,  isValidId, ctrl.getColumnTasks);
+
+router.delete("/columns/:id", authenticate,  isValidId, ctrl.deleteColumnTasks);
+
+
+router.delete("/:id", authenticate,  isValidId, ctrl.deleteTaskById);
 
 router.get("/:id", authenticate,  isValidId, ctrl.getTaskById);
 
 router.put("/:id", authenticate,  isValidId,  validateBody(schemas.updateSchema), ctrl.updateTaskById);
-
-// router.patch("/:id/favorite", authenticate,  isValidId,  validateFavorite(schemas.updateFavoriteSchema), ctrl.updateStatusTask);
-
-
 
 module.exports = router;
