# swagger.json
@@ -386,11 +386,15 @@
 						}
 					},
 					"400": {
-						"description": "Bad request (Invalid request body or Missing fields)",
+						"description": "Bad request (Invalid request body / No token)",
 						"content": {}
 					},
-					"409": {
-						"description": "Conflict (Email already in use)",
+					"401": {
+						"description": "Not authorized (Invalid access token)",
+						"content": {}
+					},
+					"404": {
+						"description": "Not found (Invalid user / Invalid session)",
 						"content": {}
 					}
 				}
@@ -414,35 +418,76 @@
 									"example": [
 										{
 											"_id": "6495f56eff9bc3304dddda90",
-											"title": "My Board",
-											"icon": "icon",
-											"background": "Ocean",
-											"columns": [],
-											"owneredUser": "648f22dda2d8f8537d580812",
+											"title": "Re-Named Board",
+											"icon": "Another Icon",
+											"background": "Woods in Autemn",
+											"columns": [
+												{
+													"title": "New Column",
+													"owneredBoard": "6495f56eff9bc3304dddda90",
+													"_id": "649604cea66ac8a3d85d00f5"
+												},
+												{
+													"title": "Home Things",
+													"owneredBoard": "6495f56eff9bc3304dddda90",
+													"_id": "64960500a66ac8a3d85d0105"
+												},
+												{
+													"title": "Projects",
+													"owneredBoard": "6495f56eff9bc3304dddda90",
+													"_id": "64960510a66ac8a3d85d0118"
+												}
+											],
 											"createdAt": "2023-06-23T19:41:34.688Z",
-											"updatedAt": "2023-06-23T19:41:34.688Z"
+											"updatedAt": "2023-06-23T21:07:57.346Z",
+											"userId": "648f22dda2d8f8537d580812"
 										},
 										{
 											"_id": "6495f645800579f42aec4a9c",
 											"title": "Another Board",
 											"icon": "icon",
 											"background": "Eiffel Tower",
-											"columns": [],
-											"owneredUser": "648f22dda2d8f8537d580812",
+											"columns": [
+												{
+													"title": "Projects",
+													"owneredBoard": "6495f645800579f42aec4a9c",
+													"_id": "64960533a66ac8a3d85d0128"
+												},
+												{
+													"title": "Important Things",
+													"owneredBoard": "6495f645800579f42aec4a9c",
+													"_id": "64960547a66ac8a3d85d012f"
+												}
+											],
 											"createdAt": "2023-06-23T19:45:09.492Z",
-											"updatedAt": "2023-06-23T19:45:09.492Z"
+											"updatedAt": "2023-06-23T20:49:11.438Z",
+											"userId": "648f22dda2d8f8537d580812"
+										},
+										{
+											"_id": "6497436ee7f17b412d6594fc",
+											"title": "TEST Board",
+											"icon": "TEST",
+											"background": "Ocean",
+											"columns": [],
+											"userId": "648f22dda2d8f8537d580812",
+											"createdAt": "2023-06-24T19:26:38.529Z",
+											"updatedAt": "2023-06-24T19:26:38.529Z"
 										}
 									]
-								}
+																	}
 							}
 						}
 					},
 					"400": {
-						"description": "Bad request (Invalid request body or Missing fields)",
+						"description": "Bad request (Invalid request body / No token)",
 						"content": {}
 					},
-					"409": {
-						"description": "Conflict (Email already in use)",
+					"401": {
+						"description": "Not authorized (Invalid access token)",
+						"content": {}
+					},
+					"404": {
+						"description": "Not found (Invalid user / Invalid session)",
 						"content": {}
 					}
 				}
@@ -483,8 +528,8 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/BoardUpdateResponse"
-								}, 
-								"example":{
+								},
+								"example": {
 									"_id": "6495f56eff9bc3304dddda90",
 									"title": "Re-Named Board",
 									"icon": "Another Icon",
@@ -503,7 +548,7 @@
 											"_id": "6495fe069dfbe0084edf5cb4"
 										}
 									],
-									"owneredUser": "648f22dda2d8f8537d580812",
+									"userId": "648f22dda2d8f8537d580812",
 									"createdAt": "2023-06-23T19:41:34.688Z",
 									"updatedAt": "2023-06-23T20:18:14.931Z"
 								}
@@ -590,8 +635,8 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/BoardUpdateResponse"
-								}, 
-								"example":{
+								},
+								"example": {
 									"_id": "6495f645800579f42aec4a9c",
 									"title": "Another Board",
 									"icon": "icon",
@@ -599,16 +644,16 @@
 									"columns": [
 										{
 											"title": "Projects",
-											"owneredBoard": "6495f645800579f42aec4a9c",
+											"boardId": "6495f645800579f42aec4a9c",
 											"_id": "64960533a66ac8a3d85d0128"
 										},
 										{
 											"title": "Important Things",
-											"owneredBoard": "6495f645800579f42aec4a9c",
+											"boardId": "6495f645800579f42aec4a9c",
 											"_id": "64960547a66ac8a3d85d012f"
 										}
 									],
-									"owneredUser": "648f22dda2d8f8537d580812",
+									"userId": "648f22dda2d8f8537d580812",
 									"createdAt": "2023-06-23T19:45:09.492Z",
 									"updatedAt": "2023-06-23T20:49:11.438Z"
 								}
@@ -670,8 +715,8 @@
 							"application/json": {
 								"schema": {
 									"$ref": "#/components/schemas/BoardUpdateResponse"
-								}, 
-								"example":{
+								},
+								"example": {
 									"_id": "6495f645800579f42aec4a9c",
 									"title": "Another Board",
 									"icon": "icon",
@@ -679,16 +724,16 @@
 									"columns": [
 										{
 											"title": "Projects",
-											"owneredBoard": "6495f645800579f42aec4a9c",
+											"boardId": "6495f645800579f42aec4a9c",
 											"_id": "64960533a66ac8a3d85d0128"
 										},
 										{
 											"title": "Important Things",
-											"owneredBoard": "6495f645800579f42aec4a9c",
+											"boardId": "6495f645800579f42aec4a9c",
 											"_id": "64960547a66ac8a3d85d012f"
 										}
 									],
-									"owneredUser": "648f22dda2d8f8537d580812",
+									"userId": "648f22dda2d8f8537d580812",
 									"createdAt": "2023-06-23T19:45:09.492Z",
 									"updatedAt": "2023-06-23T20:49:11.438Z"
 								}
@@ -779,11 +824,15 @@
 						}
 					},
 					"400": {
-						"description": "Bad request (Invalid request body or Missing fields)",
+						"description": "Bad request (No token / Invalid task id)",
 						"content": {}
 					},
-					"409": {
-						"description": "Conflict (Email already in use)",
+					"401": {
+						"description": "Not authorized (Invalid token)",
+						"content": {}
+					},
+					"404": {
+						"description": "Not found (Invalid user / Invalid session)",
 						"content": {}
 					}
 				}
@@ -809,11 +858,46 @@
 						}
 					},
 					"400": {
-						"description": "Bad request (Invalid request body or Missing fields)",
+						"description": "Bad request (No token / Invalid task id)",
 						"content": {}
 					},
-					"409": {
-						"description": "Conflict (Email already in use)",
+					"401": {
+						"description": "Not authorized (Invalid token)",
+						"content": {}
+					},
+					"404": {
+						"description": "Not found (Invalid user / Invalid session)",
+						"content": {}
+					}
+				}
+			},
+			"delete": {
+				"security": [{ "Bearer": [] }],
+				"tags": ["Tasks"],
+				"summary": "Delete all tasks the User has access to",
+				"operationId": "deleteAllTasks",
+				"parameters": [],
+				"responses": {
+					"200": {
+						"description": "Ok (Successful operation)",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/TasksDeleteResponse"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "Bad request (No token / Invalid column id)",
+						"content": {}
+					},
+					"401": {
+						"description": "Not authorized (Invalid token)",
+						"content": {}
+					},
+					"404": {
+						"description": "Not found (Invalid user / Invalid session)",
 						"content": {}
 					}
 				}
@@ -848,11 +932,15 @@
 						}
 					},
 					"400": {
-						"description": "Bad request (Invalid request body or Missing fields)",
+						"description": "Bad request (No token / Invalid task id)",
 						"content": {}
 					},
-					"409": {
-						"description": "Conflict (Email already in use)",
+					"401": {
+						"description": "Not authorized (Invalid token)",
+						"content": {}
+					},
+					"404": {
+						"description": "Not found (Invalid user / Invalid session)",
 						"content": {}
 					}
 				}
@@ -896,11 +984,15 @@
 						}
 					},
 					"400": {
-						"description": "Bad request (Invalid request body or Missing fields)",
+						"description": "Bad request (No token / Invalid task id)",
 						"content": {}
 					},
-					"409": {
-						"description": "Conflict (Email already in use)",
+					"401": {
+						"description": "Not authorized (Invalid token)",
+						"content": {}
+					},
+					"404": {
+						"description": "Not found (Invalid user / Invalid session)",
 						"content": {}
 					}
 				}
@@ -924,6 +1016,93 @@
 				"responses": {
 					"204": {
 						"description": "No Content (Successful operation)"
+					},
+					"400": {
+						"description": "Bad request (No token / Invalid task id)",
+						"content": {}
+					},
+					"401": {
+						"description": "Not authorized (Invalid token)",
+						"content": {}
+					},
+					"404": {
+						"description": "Not found (Invalid user / Invalid session)",
+						"content": {}
+					}
+				}
+			}
+		},
+		"/tasks/columns/{id}": {
+			"get": {
+				"security": [{ "Bearer": [] }],
+				"tags": ["Tasks"],
+				"summary": "Get all tasks in Column bu columnId",
+				"operationId": "getColumnTasks",
+				"parameters": [
+					{
+						"name": "id",
+						"in": "path",
+						"description": "ID of Column to get all tasks in",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Ok (Successful operation)",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "array",
+									"items": {
+										"$ref": "#/components/schemas/TaskResponse"
+									}
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "Bad request (No token / Invalid task id)",
+						"content": {}
+					},
+					"401": {
+						"description": "Not authorized (Invalid token)",
+						"content": {}
+					},
+					"404": {
+						"description": "Not found (Invalid user / Invalid session)",
+						"content": {}
+					}
+				}
+			},
+			"delete": {
+				"security": [{ "Bearer": [] }],
+				"tags": ["Tasks"],
+				"summary": "Delete all tasks in Column by columnId",
+				"operationId": "deleteColumnTasks",
+				"parameters": [
+					{
+						"name": "id",
+						"in": "path",
+						"description": "ID of Column to delete tasks in",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Ok (Successful operation)",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/TasksDeleteResponse"
+								}
+							}
+						}
 					},
 					"400": {
 						"description": "Bad request (No token / Invalid task id)",
@@ -1110,11 +1289,10 @@
 						"items": {
 							"type": "object",
 							"description": "Column Object",
-							"items": {
-								"$ref": "#/components/schemas/Column"
-							},
-							"example": "[]"
-						}
+
+							"$ref": "#/components/schemas/Column"
+						},
+						"example": "[]"
 					}
 				}
 			},
@@ -1136,7 +1314,7 @@
 						"description": "Column title",
 						"example": "To Do"
 					},
-					"owneredBoard": {
+					"boardId": {
 						"type": "string",
 						"description": "Owner board ID",
 						"example": "652ggffg1fg66125dg12"
@@ -1146,6 +1324,16 @@
 			"BoardResponse": {
 				"type": "object",
 				"properties": {
+					"_id": {
+						"type": "string",
+						"description": "Board ID",
+						"example": "6497436ee7f17b412d6594fc"
+					},
+					"userId": {
+						"type": "string",
+						"description": "Owner User ID",
+						"example": "648f22dda2d8f8537d580812"
+					},
 					"title": {
 						"type": "string",
 						"description": "Task title",
@@ -1154,7 +1342,7 @@
 					"icon": {
 						"type": "string",
 						"description": "Icon",
-						"example": ""
+						"example": "Icon"
 					},
 					"background": {
 						"type": "string",
@@ -1167,19 +1355,11 @@
 						"items": {
 							"type": "object",
 							"description": "Column Object",
-							"items": {
-								"$ref": "#/components/schemas/Column"
-							},
-
-							"example": "[]"
-						}
+							"$ref": "#/components/schemas/Column"
+						},
+						"example": "[]"
 					},
-					"owneredUser": {
-						"type": "string",
-						"description": "Owner User ID",
-						"example": "Ocean"
-					},
-					"createdAt": {
+										"createdAt": {
 						"type": "string",
 						"description": "Task creation time",
 						"example": "2023-06-23T19:45:09.492Z"
@@ -1255,13 +1435,13 @@
 								"$ref": "#/components/schemas/ColumnResponse"
 							},
 							"example": [
-								{ "title": "To Do", "owneredBoard": "65287" },
-								{ "title": "Projects", "owneredBoard": "65287" },
-								{ "title": "Home Things", "owneredBoard": "65287" }
+								{ "title": "To Do", "boardId": "65287" },
+								{ "title": "Projects", "boardId": "65287" },
+								{ "title": "Home Things", "boardId": "65287" }
 							]
 						}
 					},
-					"owneredUser": {
+					"userId": {
 						"type": "string",
 						"description": "Owner User ID",
 						"example": "Ocean"
@@ -1278,14 +1458,13 @@
 					}
 				}
 			},
-
 			"TaskRequest": {
 				"type": "object",
 				"properties": {
 					"title": {
 						"type": "string",
 						"description": "Task title",
-						"example": "My first important task"
+						"example": "My first important task "
 					},
 					"text": {
 						"type": "string",
@@ -1302,6 +1481,16 @@
 						"type": "string",
 						"description": "Task deadline",
 						"example": "2024-01-26T13:51:50.417-07:00"
+					},
+					"boardId": {
+						"type": "string",
+						"description": "Board Id",
+						"example": "64960533a66ac8a3d85d0128"
+					},
+					"columnId": {
+						"type": "string",
+						"description": "Column Id",
+						"example": "64960533a66ac8a3d85d0128"
 					}
 				}
 			},
@@ -1311,12 +1500,22 @@
 					"_id": {
 						"type": "string",
 						"description": "Task id",
-						"example": "64955868336703c3b2a3b065"
+						"example": "649708ad775921c12a1fb1c7"
 					},
-					"_userId": {
+					"userId": {
 						"type": "string",
 						"description": "Task id",
 						"example": "648f22dda2d8f8537d580812"
+					},
+					"boardId": {
+						"type": "string",
+						"description": "Board Id",
+						"example": "64960533a66ac8a3d85d0128"
+					},
+					"columnId": {
+						"type": "string",
+						"description": "Column Id",
+						"example": "64960533a66ac8a3d85d0128"
 					},
 					"title": {
 						"type": "string",
@@ -1348,6 +1547,21 @@
 						"type": "string",
 						"description": "Task task re-new time",
 						"example": "2023-06-21T18:25:45.953+00:00"
+					}
+				}
+			},
+			"TasksDeleteResponse": {
+				"type": "object",
+				"properties": {
+					"message": {
+						"type": "string",
+						"description": "Tasks deleted",
+						"example": "Tasks deleted"
+					},
+					"deletedCount": {
+						"type": "number",
+						"description": "Number of tasks deleted",
+						"example": 3
 					}
 				}
 			}
